# RAGAgent

./: .gitignore  COMPARISON.md  crawler.py  main.py  pyproject.toml  requirements.txt  test.py  test_mcp_rag.py  tools.py  workflow.drawio
benchmark/: best_embedding_model_rag_app.ipynb  comparison.md  docker-compose.yaml  pgai-quick-start.md
data/: certificate.md  fluffy.md  strutted.md  twomillion.md
sitemaps/: nmap.xml
utils/: crawl4ai.md  crawl4ai_crawler.py  doc_loader.py  sitemap_parser.py  tools.py  youtube_transcript.py
