[project]
name = "ragagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "chromadb>=1.1.1",
    "crawl4ai>=0.7.4",
    "dotenv>=0.9.9",
    "google-generativeai>=0.8.5",
    "langchain>=0.3.27",
    "langchain-community>=0.3.31",
    "langchain-google-genai>=2.0.10",
    "langchain-nomic>=0.1.5",
    "langchain-ollama>=0.3.10",
    "langchainhub>=0.1.21",
    "langgraph>=0.6.10",
    "mcp[cli]>=1.17.0",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "tavily-python>=0.7.12",
    "tiktoken>=0.12.0",
    "unstructured[md]>=0.18.15",
]
